--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 :root {
   --primary: #029ae0;
   --primary-100: #073044;
@@ -17,7 +19,7 @@
 }
 
 * {
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   font-size: var(--font-base);
@@ -25,9 +27,6 @@
 }
 
 #app {
-  display: grid;
-  grid-template-columns: 300px 1fr;
-  grid-template-areas: "sidebar viewer";
   height: 100vh;
   background-color: var(--background);
   color: #fff;
@@ -43,6 +42,71 @@
   pointer-events: none;
 }
 
+header {
+  display: flex;
+  justify-items: center;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+}
+
+header img {
+  height: 30px;
+  margin: 10px;
+}
+
+.header-links {
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-content: center;
+}
+.header-links ul {
+  margin: 10px;
+  font-weight: 200;
+}
+
+.header-links ul:hover {
+  cursor: pointer;
+}
+
 #landing-page {
-  background-image: url("/earth.jpg");
+  width: 100%;
+  height: 100vh;
+  background-image: url("/public/earth.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  display: grid;
+  grid-template-rows: 50px 1fr auto;
+}
+
+#landing-page::before {
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+}
+
+#landing-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#landing-items h1 {
+  font-size: 100px;
+  font-weight: 900;
+}
+
+#landing-items h2 {
+  font-size: 40px;
+  font-weight: 300;
 }
